# pinocchio_codes

./: .gitignore
escrow/: Cargo.toml  README.md
escrow/benches/: compute_units.md  compute_units.rs
escrow/src/: lib.rs
escrow/src/instruction/: initialize_mystate.rs  update_mystate.rs
escrow/src/state/: my_state.rs
escrow/tests/: unit_tests.rs
escrow1/: Cargo.toml
escrow1/benches/: compute_units.md  compute_units.rs
escrow1/src/: entrypoint.rs  error.rs
escrow1/src/instruction/: make.rs  mod.rs  take.rs
escrow1/src/state/: escrow.rs  mod.rs
escrow_updated/: README.md  gen-client.sh
escrow_updated/client/idl/: solana_pinocchio_starter.json
escrow_updated/program/: Cargo.toml
escrow_updated/program/benches/: compute_units.md  compute_units.rs
escrow_updated/program/src/: entrypoint.rs
escrow_updated/program/src/instruction/: create_account.rs  create_account_checked.rs  create_account_with_seed.rs  initialize_mystate.rs  make.rs  mod.rs  take.rs  update_mystate.rs
escrow_updated/program/src/state/: escrow_state.rs  mod.rs  my_state.rs
escrow_updated/program/tests/: unit_tests.rs
fundraiser/src/: entrypoint.rs
fundraiser/src/instruction/: contribute.rs  deposit.rs  initialize.rs  mod.rs  withdraw.rs
fundraiser_vesting/: README.md
fundraiser_vesting/client/: .gitignore  .solitarc.js  README.md  bun.lockb  package.json
fundraiser_vesting/program/: Cargo.toml
pinocchio-multisig/: README.md  gen-client.sh
pinocchio-multisig/program/: Cargo.toml
pinocchio-multisig/program/benches/: compute_units.md  compute_units.rs
pinocchio-multisig/program/src/: entrypoint.rs  error.rs
pinocchio-multisig/program/src/instruction/: approve_transaction.rs  create_proposal.rs  create_transaction.rs  execute_transaction.rs  initialize_mystate.rs  mod.rs  multisig_config.rs  multisig_create.rs  stale_transaction_index.rs  update_members.rs  update_mystate.rs  update_proposal_result.rs  vote.rs
pinocchio-multisig/program/src/state/: member_state.rs  mod.rs  multisig_config.rs  multisig_state.rs  my_state.rs  proposal.rs  transaction.rs  utils.rs
pinocchio-multisig/program/tests/: unit_tests.rs
staking/: Cargo.toml
staking/src/: lib.rs
staking/src/instructions/: initialize_config.rs  initialize_user.rs  mod.rs  stake.rs  unstake.rs
staking/src/state/: mod.rs  stake_account.rs  stake_config.rs  user_account.rs
test_program/: Cargo.toml
test_program/src/: lib.rs
(+23 files in other folders)
