[package]
name = "staking"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.8.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
five8_const = "0.1.3"


[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "=2.0.8"
spl-token = "6.0.0"
